--- a/components/CalculatorResult/calculator-result.module.css
+++ b/components/CalculatorResult/calculator-result.module.css
@@ -1,4 +1,11 @@
 .divResult {
+    width: 100%;
+    border: 1px solid gray;
+    padding: 10px;
+}
+
+.divRowResult {
+    width: 100%;
     display: flex;
 }
 
@@ -6,10 +13,9 @@
     text-align: center;
     width: 30px;
     height: 30px;
-    margin: 0px;
     color: white;
     font-size: 100%;
-    margin-right: 10px;
+    margin: 5px 2px;
     font-weight: bolder;
     border: 1px solid black;
     background-color: #ff9f1a;
