--- a/styles/Stage.module.css
+++ b/styles/Stage.module.css
@@ -7,7 +7,7 @@
 .body {
   width: 60%;
   margin: 10px auto;
-  height: 100vh;
+  height: 100%;
   padding: 10px;
   background-color: #EEE;
   border: 1px solid #999;
