--- a/components/CalculatorResult/calculator-result.module.css
+++ b/components/CalculatorResult/calculator-result.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     border: 1px solid gray;
     padding: 10px;
+    min-height: 200px;
 }
 
 .divRowResult {
@@ -10,8 +11,9 @@
 }
 
 .result {
+    padding: 0px 2px;
     text-align: center;
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     color: white;
     font-size: 100%;
